// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests the Page Component snapshots standard component with props 1`] = `
<View
  style={
    Object {
      "borderWidth": 0,
      "width": 750,
    }
  }
>
  <ChildComponent />
</View>
`;

exports[`tests the Page Component snapshots standard component without props 1`] = `
<View
  style={
    Object {
      "borderWidth": 0,
      "width": 750,
    }
  }
/>
`;

exports[`tests the Page Component tests that child components are not rendered if lazyrender  = true and page is not the active page and lazyrenderThreshold = 0 1`] = `
<View
  style={
    Object {
      "borderWidth": 0,
      "width": 750,
    }
  }
/>
`;

exports[`tests the Page Component tests that child components are not rendered if lazyrender  = true and page is not the active page and not in lazyrenderThreshold 1`] = `
<View
  style={
    Object {
      "borderWidth": 0,
      "width": 750,
    }
  }
/>
`;

exports[`tests the Page Component tests that child components are rendered if lazyrender  = true and page is not the active page but is in lazyrenderThreshold 1`] = `
<View
  style={
    Object {
      "borderWidth": 0,
      "width": 750,
    }
  }
>
  <ChildComponent />
</View>
`;

exports[`tests the Page Component tests that devThresholdOverlay is only displayed when dev = true and its a threshold page test overlay is displayed when isThreshold 1`] = `
<View
  style={
    Object {
      "borderWidth": 1,
      "width": 750,
    }
  }
>
  <ChildComponent />
  <View
    style={
      Object {
        "backgroundColor": "red",
        "bottom": 0,
        "left": 0,
        "opacity": 0.4,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`tests the Page Component tests that devThresholdOverlay is only displayed when dev = true and its a threshold page test overlay is displayed when isThreshold but not dev 1`] = `
<View
  style={
    Object {
      "borderWidth": 0,
      "width": 750,
    }
  }
>
  <ChildComponent />
</View>
`;

exports[`tests the Page Component tests that devThresholdOverlay is only displayed when dev = true and its a threshold page test overlay is displayed when not isThreshold 1`] = `
<View
  style={
    Object {
      "borderWidth": 1,
      "width": 750,
    }
  }
>
  <ChildComponent />
</View>
`;
